--- a/Country Info.ipynb
+++ b/Country Info.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0e9bb34c",
+   "id": "05db3469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "161890a7",
+   "id": "68f6c713",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f5c4ca72",
+   "id": "0984dd64",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a436cd0f",
+   "id": "bb7376cc",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dfe20ee0",
+   "id": "2129a833",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ce60c017",
+   "id": "682e7b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1e7ce5e7",
+   "id": "cdd141dd",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "37c0f9bb",
+   "id": "e219c6c0",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d3ae3052",
+   "id": "d3745919",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ba2f4db9",
+   "id": "34f297c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5b5687cf",
+   "id": "345177af",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e96686a2",
+   "id": "19ae9d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8703e7ed",
+   "id": "249fc0c7",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "edec31b8",
+   "id": "4b48e98a",
    "metadata": {},
    "outputs": [
     {
@@ -1458,8 +1458,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "076b8f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['#_x', 'Country', 'GDP\\n(nominal, 2022)', 'GDP\\n(abbrev.)',\n",
+       "       'GDP\\ngrowth', 'Population\\n(2022)', 'GDP\\nper capita',\n",
+       "       'Share of\\nWorld GDP', '#_y', 'Population\\n(2024)', 'Yearly\\nChange',\n",
+       "       'Net\\nChange', 'Density\\n(P/Km²)', 'Land Area\\n(Km²)',\n",
+       "       'Migrants\\n(net)', 'Fert.\\nRate', 'Med.\\nAge', 'Urban\\nPop %',\n",
+       "       'World\\nShare'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_csv.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9510939f",
+   "id": "88e61263",
    "metadata": {},
    "outputs": [],
    "source": []
