--- a/Country Info_merge_data_cleaning.ipynb
+++ b/Country Info_merge_data_cleaning.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0afe1e82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import re\n",
-    "\n",
-    "def preprocess_text(text):\n",
-    "    text = text.lower()  \n",
-    "    text = re.sub(r'[^\\w\\s]', '', text)  \n",
-    "    words = text.split() \n",
-    "    return words\n",
-    "\n",
-    "def get_word_frequencies(text):\n",
-    "    words = preprocess_text(text)\n",
-    "    word_counts = Counter(words)\n",
-    "    return word_counts\n"
+    "import pandas as pd"
    ]
   },
   {
