--- a/World Bank Info_merge_data_cleaning.ipynb
+++ b/World Bank Info_merge_data_cleaning.ipynb
@@ -3,7 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aad56c33",
+   "id": "88ea4598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#API_IT.CEL.SETS_DS2_en_csv_v2_2874878.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d371ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#API_NY.GDP.MKTP.CD_DS2_en_csv_v2_2788787.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d14c7f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7ce22797-d805-43d2-b219-756e150888d5_Data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014c13bf",
    "metadata": {},
    "outputs": [],
    "source": []
