Update Sales Data Cleaning.ipynb

--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
@@ -608,7 +608,7 @@
     }
    ],
    "source": [
-    "df_csv.info"
+    "df_csv.info #This provides a consice summary of my dataframe. "
    ]
   },
   {
@@ -632,7 +632,7 @@
     }
    ],
    "source": [
-    "df_csv.columns "
+    "df_csv.columns #This displays all of the columns in my dataframe."
    ]
   },
   {
@@ -1119,7 +1119,7 @@
     }
    ],
    "source": [
-    "df_csv.head(25)"
+    "df_csv.head(25) #This displays the top 25 rows in my dataframe."
    ]
   },
   {
@@ -1632,7 +1632,7 @@
     }
    ],
    "source": [
-    "df_csv.tail(25)"
+    "df_csv.tail(25) "
    ]
   },
   {
