Update Sales Data Cleaning.ipynb

--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
@@ -1119,7 +1119,7 @@
     }
    ],
    "source": [
-    "df_csv.head(25) #This displays the top 25 rows in my dataframe."
+    "df_csv.head(25) #This displays the first 25 rows in my dataframe."
    ]
   },
   {
@@ -1632,7 +1632,7 @@
     }
    ],
    "source": [
-    "df_csv.tail(25) "
+    "df_csv.tail(25) #This displays the last 25 rows in my dataframe."
    ]
   },
   {
