Update Sales Data Cleaning.ipynb

--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
@@ -1637,12 +1637,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "62828475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The focus is cleaning my dataframe now and I do a number of things. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "0a5102c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv.drop(columns=['Order_Priority'], inplace=True)"
+    "df_csv.drop(columns=['Order_Priority'], inplace=True) #This drops the column that I no longer want in my Data Frame"
    ]
   },
   {
@@ -1666,7 +1676,7 @@
     }
    ],
    "source": [
-    "df_csv.columns "
+    "df_csv.columns #I verify that the Order_Priority column was dropped by pulling the updated column names. "
    ]
   },
   {
@@ -1676,7 +1686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv['Order_Date'] = pd.to_datetime(df_csv['Order_Date'], errors='coerce', dayfirst=False)"
+    "df_csv['Order_Date'] = pd.to_datetime(df_csv['Order_Date'], errors='coerce', dayfirst=False) #Wanted the date columns to look the same. Some had a dash and others had forward slash. Doing it this way added a timestamp but I removed it in later steps below.  "
    ]
   },
   {
@@ -1686,7 +1696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv['Ship_Date'] = pd.to_datetime(df_csv['Ship_Date'], errors='coerce', dayfirst=False)"
+    "df_csv['Ship_Date'] = pd.to_datetime(df_csv['Ship_Date'], errors='coerce', dayfirst=False) #Wanted the date columns to look the same. Some had a dash and others had forward slash. Doing it this way added a timestamp but I removed it in later steps below."
    ]
   },
   {
@@ -1696,7 +1706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv['Order_ID'] = df_csv['Order_ID'].astype('int64') "
+    "df_csv['Order_ID'] = df_csv['Order_ID'].astype('int64') #I changed a few column formats and this is one of them. I do the same for 3 other columns next.  "
    ]
   },
   {
@@ -1736,7 +1746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv.drop_duplicates(inplace=True)"
+    "df_csv.drop_duplicates(inplace=True) #Almost done, this removed duplicates from my dataframe. Way faster than doing it via Google Sheets or excel!"
    ]
   },
   {
@@ -1773,7 +1783,7 @@
     }
    ],
    "source": [
-    "print(df_csv.head())"
+    "print(df_csv.head()) #I wanted to check the updated column names before continuing. "
    ]
   },
   {
@@ -1783,7 +1793,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv.to_csv(\"data_all_regions_clean.csv\")"
+    "df_csv.to_csv(\"data_all_regions_clean.csv\") #I then saved my updated data to a new file with cleaner data. "
    ]
   },
   {
@@ -2035,8 +2045,8 @@
     }
    ],
    "source": [
-    "df_csv = pd.read_csv(\"data_all_regions_clean.csv\")\n",
-    "df_csv"
+    "df_csv = pd.read_csv(\"data_all_regions_clean.csv\") #This opened my clean data and put into another dataframe. \n",
+    "df_csv "
    ]
   },
   {
@@ -2095,7 +2105,7 @@
    "source": [
     "df_csv['Order_Date'] = pd.to_datetime(df_csv['Order_Date'])\n",
     "\n",
-    "df_csv['Order_Date'] = df_csv['Order_Date'].dt.date\n",
+    "df_csv['Order_Date'] = df_csv['Order_Date'].dt.date #I noticed that I needed to remove the timestamps (mentioned earlier) so updated here. \n",
     "\n",
     "\n",
     "print(df_csv)"
@@ -2612,7 +2622,7 @@
     }
    ],
    "source": [
-    "df_csv.head(25)"
+    "df_csv.head(25) # wanted to check the updated Order Date column. "
    ]
   },
   {
@@ -2671,7 +2681,7 @@
    "source": [
     "df_csv['Ship_Date'] = pd.to_datetime(df_csv['Ship_Date'], errors='coerce', dayfirst=False)\n",
     "\n",
-    "df_csv['Ship_Date'] = df_csv['Ship_Date'].dt.date\n",
+    "df_csv['Ship_Date'] = df_csv['Ship_Date'].dt.date #Had to remove the timestamps here too (mentioned earlier) so updated here.\n",
     "\n",
     "print(df_csv)"
    ]
@@ -2925,8 +2935,8 @@
     }
    ],
    "source": [
-    "df_csv = pd.read_csv(\"data_all_regions_clean.csv\")\n",
-    "df_csv"
+    "df_csv = pd.read_csv(\"data_all_regions_clean.csv\") # Finished all the cleaning I planned to do and saved the dataframe into a new file. \n",
+    "df_csv #This is the primary file I ended up using for my dashboard. "
    ]
   },
   {
@@ -2983,9 +2993,9 @@
     }
    ],
    "source": [
-    "df_csv_sub_saharan_africa = df_csv[df_csv['Region'] == 'Sub-Saharan Africa']\n",
+    "# I wanted a clean data file but df_csv_sub_saharan_africa = df_csv[df_csv['Region'] == 'Sub-Saharan Africa']\n",
     "\n",
-    "print(df_csv_sub_saharan_africa)"
+    "print(df_csv_sub_saharan_africa) "
    ]
   },
   {
