Update World Bank Data Cleaning.ipynb

--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/World Bank Data Cleaning.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/World Bank Data Cleaning.ipynb
@@ -7,8 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd #Imported in Panda to help me with the data cleaning. This helps me use SQL commands. \n",
     "\n",
+    "#Loaded the data from my 3 files into dataframes. \n",
     "df_gdp = pd.read_csv('GDP by country - Sheet1.csv')  \n",
     "df_pop = pd.read_csv('Population by Country - Sheet1.csv') \n",
     "df_cell = pd.read_csv('Cell_by_country - Cell_by_country.csv')"
@@ -74,6 +75,7 @@
     }
    ],
    "source": [
+    "#As always, I always get some basic info about my dataframes before diving into the cleaning. \n",
     "print(df_cell.head())\n",
     "print(df_pop.head())\n",
     "print(df_gdp.head())"
@@ -99,7 +101,7 @@
     }
    ],
    "source": [
-    "df_cell.columns\n"
+    "df_cell.columns #I checked the column names of this dataframe before deciding how I will merge it with the other dataframes.\n"
    ]
   },
   {
@@ -124,7 +126,7 @@
     }
    ],
    "source": [
-    "df_pop.columns"
+    "df_pop.columns #I checked the column names of this dataframe before deciding how I will merge it with the other dataframes."
    ]
   },
   {
@@ -147,7 +149,7 @@
     }
    ],
    "source": [
-    "df_gdp.columns"
+    "df_gdp.columns #I checked the column names of this dataframe before deciding how I will merge it with the other dataframes."
    ]
   },
   {
@@ -157,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cell.rename(columns={'Country Name': 'Country'}, inplace=True)"
+    "df_cell.rename(columns={'Country Name': 'Country'}, inplace=True) #I had to rename this column so that each dataframe has one similarly-named column that I can merge them by. "
    ]
   },
   {
@@ -167,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gdp.rename(columns={'Country (or dependency)': 'Country'}, inplace=True)"
+    "df_gdp.rename(columns={'Country (or dependency)': 'Country'}, inplace=True)#I had to rename this column so that each dataframe has one similarly-named column that I can merge them by."
    ]
   },
   {
@@ -190,7 +192,7 @@
     }
    ],
    "source": [
-    "df_cell.columns"
+    "df_cell.columns #Checked the updated column names. "
    ]
   },
   {
@@ -213,7 +215,7 @@
     }
    ],
    "source": [
-    "df_gdp.columns"
+    "df_gdp.columns #Checked the updated column names."
    ]
   },
   {
@@ -238,7 +240,7 @@
     }
    ],
    "source": [
-    "df_pop.columns"
+    "df_pop.columns #Checked the updated column names."
    ]
   },
   {
@@ -248,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pop.rename(columns={'Country (or dependency)': 'Country'}, inplace=True)"
+    "df_pop.rename(columns={'Country (or dependency)': 'Country'}, inplace=True) #Had to rename this properly as well. "
    ]
   },
   {
@@ -272,7 +274,7 @@
     }
    ],
    "source": [
-    "df_pop.columns"
+    "df_pop.columns #Checked the updated column names."
    ]
   },
   {
@@ -282,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_summary = pd.merge(df_cell, df_pop, on='Country', how='outer')"
+    "df_summary = pd.merge(df_cell, df_pop, on='Country', how='outer') #Merged 2 dataframes first because I kept getting an error when I tried to do 3 at once. "
    ]
   },
   {
@@ -292,7 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_together = pd.merge(df_summary , df_gdp, on='Country', how='outer')"
+    "df_together = pd.merge(df_summary , df_gdp, on='Country', how='outer')\n",
+    "#Merged the last dataframe into the newly-created dataframe."
    ]
   },
   {
@@ -320,134 +323,51 @@
     }
    ],
    "source": [
-    "df_together.columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "218d06b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                         Country  Population\\n(2024)  Land Area\\n(Km²)  \\\n",
-      "0                          Aruba            108066.0             180.0   \n",
-      "1    Africa Eastern and Southern                 NaN               NaN   \n",
-      "2                    Afghanistan          42647492.0          652860.0   \n",
-      "3     Africa Western and Central                 NaN               NaN   \n",
-      "4                         Angola          37885849.0         1246700.0   \n",
-      "..                           ...                 ...               ...   \n",
-      "314                   Montserrat              4389.0             100.0   \n",
-      "315             Falkland Islands              3470.0           12170.0   \n",
-      "316                      Tokelau              2506.0              10.0   \n",
-      "317                         Niue              1819.0             260.0   \n",
-      "318                     Holy See               496.0               0.0   \n",
-      "\n",
-      "     Calculated Density (P/Km²)  \n",
-      "0                    600.366667  \n",
-      "1                           NaN  \n",
-      "2                     65.324100  \n",
-      "3                           NaN  \n",
-      "4                     30.388906  \n",
-      "..                          ...  \n",
-      "314                   43.890000  \n",
-      "315                    0.285127  \n",
-      "316                  250.600000  \n",
-      "317                    6.996154  \n",
-      "318                         inf  \n",
-      "\n",
-      "[319 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Convert to string and handle non-numeric entries\n",
-    "df_together['Population\\n(2024)'] = pd.to_numeric(df_together['Population\\n(2024)'].astype(str).str.replace(',', ''), errors='coerce')\n",
-    "df_together['Land Area\\n(Km²)'] = pd.to_numeric(df_together['Land Area\\n(Km²)'].astype(str).str.replace(',', ''), errors='coerce')\n",
-    "\n",
-    "# Calculate the density\n",
-    "df_together['Calculated Density (P/Km²)'] = df_together['Population\\n(2024)'] / df_together['Land Area\\n(Km²)']\n",
-    "\n",
-    "# Display the updated DataFrame\n",
-    "print(df_together[['Country', 'Population\\n(2024)', 'Land Area\\n(Km²)', 'Calculated Density (P/Km²)']])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "19b558bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                         Country  Population\\n(2024)  Land Area\\n(Km²)  \\\n",
-      "0                          Aruba            108066.0             180.0   \n",
-      "1    Africa Eastern and Southern                 NaN               NaN   \n",
-      "2                    Afghanistan          42647492.0          652860.0   \n",
-      "3     Africa Western and Central                 NaN               NaN   \n",
-      "4                         Angola          37885849.0         1246700.0   \n",
-      "..                           ...                 ...               ...   \n",
-      "314                   Montserrat              4389.0             100.0   \n",
-      "315             Falkland Islands              3470.0           12170.0   \n",
-      "316                      Tokelau              2506.0              10.0   \n",
-      "317                         Niue              1819.0             260.0   \n",
-      "318                     Holy See               496.0               0.0   \n",
-      "\n",
-      "     Calculated Density (P/Km²)  \n",
-      "0                    600.366667  \n",
-      "1                           NaN  \n",
-      "2                     65.324100  \n",
-      "3                           NaN  \n",
-      "4                     30.388906  \n",
-      "..                          ...  \n",
-      "314                   43.890000  \n",
-      "315                    0.285127  \n",
-      "316                  250.600000  \n",
-      "317                    6.996154  \n",
-      "318                         inf  \n",
-      "\n",
-      "[319 rows x 4 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Convert to string, remove non-numeric characters, and convert to numeric\n",
-    "df_together['Population\\n(2024)'] = pd.to_numeric(df_together['Population\\n(2024)'].astype(str).str.replace(',', ''), errors='coerce')\n",
-    "df_together['Land Area\\n(Km²)'] = pd.to_numeric(df_together['Land Area\\n(Km²)'].astype(str).str.replace(',', ''), errors='coerce')\n",
-    "\n",
-    "# Calculate the density\n",
-    "df_together['Calculated Density (P/Km²)'] = df_together['Population\\n(2024)'] / df_together['Land Area\\n(Km²)']\n",
-    "\n",
-    "# Display the updated DataFrame to check the new column\n",
-    "print(df_together[['Country', 'Population\\n(2024)', 'Land Area\\n(Km²)', 'Calculated Density (P/Km²)']])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "c35a4e63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_together.to_csv('world_bank_data_merged.csv', index=False)"
+    "df_together.columns\n",
+    "#Checked my column names expecting to see way more columns and I was right. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "218d06b8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Convered to string and handle non-numeric entries\n",
+    "df_together['Population\\n(2024)'] = pd.to_numeric(df_together['Population\\n(2024)'].astype(str).str.replace(',', ''), errors='coerce')\n",
+    "df_together['Land Area\\n(Km²)'] = pd.to_numeric(df_together['Land Area\\n(Km²)'].astype(str).str.replace(',', ''), errors='coerce')\n",
+    "\n",
+    "# Calculated the density #This is a new calculated value that I was able to do with my merged data. \n",
+    "df_together['Calculated Density (P/Km²)'] = df_together['Population\\n(2024)'] / df_together['Land Area\\n(Km²)']\n",
+    "\n",
+    "# Displayed the updated DataFrame\n",
+    "print(df_together[['Country', 'Population\\n(2024)', 'Land Area\\n(Km²)', 'Calculated Density (P/Km²)']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "eec97649",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Saved my newly merged data into a few csv file. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf7fe20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_together.to_csv('world_bank_data_merged.csv', index=False) #this may produce an error if you run it now but it worked earlier. "
+   ]
   }
  ],
  "metadata": {
