Update Sales Data Cleaning.ipynb

--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/Sales Data Cleaning.ipynb
@@ -1638,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "62828475",
+   "id": "38fa9ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2993,7 +2993,8 @@
     }
    ],
    "source": [
-    "# I wanted a clean data file but df_csv_sub_saharan_africa = df_csv[df_csv['Region'] == 'Sub-Saharan Africa']\n",
+    "df_csv_sub_saharan_africa = df_csv[df_csv['Region'] == 'Sub-Saharan Africa']\n",
+    "## I wanted a clean data file but with only the data from the Sub-Saharan countries.\n",
     "\n",
     "print(df_csv_sub_saharan_africa) "
    ]
@@ -3005,7 +3006,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv_sub_saharan_africa.to_csv('data_sub_saharan_africa_clean.csv', index=False)"
+    "df_csv_sub_saharan_africa.to_csv('data_sub_saharan_africa_clean.csv', index=False)\n",
+    "#Saved my new file which only includes Sub-Saharan-Africa. "
    ]
   },
   {
