--- a/2. Data Cleaning & Interpretation/Jupyter Notebooks/clean_data_with_broken_down_dates.ipynb
+++ b/2. Data Cleaning & Interpretation/Jupyter Notebooks/clean_data_with_broken_down_dates.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "2714e140-90f9-46a5-9567-554127ed7eb0",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "f002c39b-6490-41b9-b900-f02f84c3076f",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "fb047f97-fc7a-4e90-8e0e-15c7322ed86f",
    "metadata": {},
    "outputs": [
@@ -419,9 +419,9 @@
        "      <td>Baby Food</td>\n",
        "      <td>Online</td>\n",
        "      <td>M</td>\n",
-       "      <td>12/20/2013</td>\n",
+       "      <td>2013-12-20</td>\n",
        "      <td>957081544.0</td>\n",
-       "      <td>01-11-2014</td>\n",
+       "      <td>01/11/2014</td>\n",
        "      <td>552</td>\n",
        "      <td>255.28</td>\n",
        "      <td>159.42</td>\n",
@@ -437,9 +437,9 @@
        "      <td>Snacks</td>\n",
        "      <td>Offline</td>\n",
        "      <td>C</td>\n",
-       "      <td>07/05/2010</td>\n",
+       "      <td>2010-07-05</td>\n",
        "      <td>301644504.0</td>\n",
-       "      <td>7/26/2010</td>\n",
+       "      <td>07/26/2010</td>\n",
        "      <td>2167</td>\n",
        "      <td>152.58</td>\n",
        "      <td>97.44</td>\n",
@@ -455,9 +455,9 @@
        "      <td>Beverages</td>\n",
        "      <td>Offline</td>\n",
        "      <td>C</td>\n",
-       "      <td>09/12/2011</td>\n",
+       "      <td>2011-09-12</td>\n",
        "      <td>478051030.0</td>\n",
-       "      <td>9/29/2011</td>\n",
+       "      <td>09/29/2011</td>\n",
        "      <td>4778</td>\n",
        "      <td>47.45</td>\n",
        "      <td>31.79</td>\n",
@@ -473,9 +473,9 @@
        "      <td>Cereal</td>\n",
        "      <td>Offline</td>\n",
        "      <td>L</td>\n",
-       "      <td>05/13/2010</td>\n",
+       "      <td>2010-05-13</td>\n",
        "      <td>892599952.0</td>\n",
-       "      <td>6/15/2010</td>\n",
+       "      <td>06/15/2010</td>\n",
        "      <td>9016</td>\n",
        "      <td>205.70</td>\n",
        "      <td>117.11</td>\n",
@@ -491,9 +491,9 @@
        "      <td>Snacks</td>\n",
        "      <td>Offline</td>\n",
        "      <td>C</td>\n",
-       "      <td>07/20/2015</td>\n",
+       "      <td>2015-07-20</td>\n",
        "      <td>571902596.0</td>\n",
-       "      <td>7/27/2015</td>\n",
+       "      <td>07/27/2015</td>\n",
        "      <td>7542</td>\n",
        "      <td>152.58</td>\n",
        "      <td>97.44</td>\n",
@@ -527,9 +527,9 @@
        "      <td>Household</td>\n",
        "      <td>Offline</td>\n",
        "      <td>C</td>\n",
-       "      <td>04/03/2015</td>\n",
+       "      <td>2015-04-03</td>\n",
        "      <td>217984473.0</td>\n",
-       "      <td>4/20/2015</td>\n",
+       "      <td>04/20/2015</td>\n",
        "      <td>5305</td>\n",
        "      <td>668.27</td>\n",
        "      <td>502.54</td>\n",
@@ -545,9 +545,9 @@
        "      <td>Clothes</td>\n",
        "      <td>Offline</td>\n",
        "      <td>L</td>\n",
-       "      <td>08/17/2014</td>\n",
+       "      <td>2014-08-17</td>\n",
        "      <td>169748055.0</td>\n",
-       "      <td>10-02-2014</td>\n",
+       "      <td>10/02/2014</td>\n",
        "      <td>1077</td>\n",
        "      <td>109.28</td>\n",
        "      <td>35.84</td>\n",
@@ -563,9 +563,9 @@
        "      <td>Baby Food</td>\n",
        "      <td>Offline</td>\n",
        "      <td>H</td>\n",
-       "      <td>11/23/2016</td>\n",
+       "      <td>2016-11-23</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>12-10-2016</td>\n",
+       "      <td>12/10/2016</td>\n",
        "      <td>5204</td>\n",
        "      <td>255.28</td>\n",
        "      <td>159.42</td>\n",
@@ -581,9 +581,9 @@
        "      <td>Clothes</td>\n",
        "      <td>Online</td>\n",
        "      <td>L</td>\n",
-       "      <td>04/22/2014</td>\n",
+       "      <td>2014-04-22</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>05-11-2014</td>\n",
+       "      <td>05/11/2014</td>\n",
        "      <td>9410</td>\n",
        "      <td>109.28</td>\n",
        "      <td>35.84</td>\n",
@@ -599,9 +599,9 @@
        "      <td>Vegetables</td>\n",
        "      <td>Online</td>\n",
        "      <td>L</td>\n",
-       "      <td>07/08/2011</td>\n",
+       "      <td>2011-07-08</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>08-07-2011</td>\n",
+       "      <td>08/07/2011</td>\n",
        "      <td>2450</td>\n",
        "      <td>154.06</td>\n",
        "      <td>90.93</td>\n",
@@ -628,31 +628,31 @@
        "4998        4998                             Europe               Finland   \n",
        "4999        4999                 Sub-Saharan Africa              Tanzania   \n",
        "\n",
-       "       Item_Type Sales_Channel Order_Priority  Order_Date     Order_ID  \\\n",
-       "0      Baby Food        Online              M  12/20/2013  957081544.0   \n",
-       "1         Snacks       Offline              C  07/05/2010  301644504.0   \n",
-       "2      Beverages       Offline              C  09/12/2011  478051030.0   \n",
-       "3         Cereal       Offline              L  05/13/2010  892599952.0   \n",
-       "4         Snacks       Offline              C  07/20/2015  571902596.0   \n",
-       "...          ...           ...            ...         ...          ...   \n",
-       "4995   Household       Offline              C  04/03/2015  217984473.0   \n",
-       "4996     Clothes       Offline              L  08/17/2014  169748055.0   \n",
-       "4997   Baby Food       Offline              H  11/23/2016          NaN   \n",
-       "4998     Clothes        Online              L  04/22/2014          NaN   \n",
-       "4999  Vegetables        Online              L  07/08/2011          NaN   \n",
+       "       Item_Type Sales_Channel Order_Priority Order_Date     Order_ID  \\\n",
+       "0      Baby Food        Online              M 2013-12-20  957081544.0   \n",
+       "1         Snacks       Offline              C 2010-07-05  301644504.0   \n",
+       "2      Beverages       Offline              C 2011-09-12  478051030.0   \n",
+       "3         Cereal       Offline              L 2010-05-13  892599952.0   \n",
+       "4         Snacks       Offline              C 2015-07-20  571902596.0   \n",
+       "...          ...           ...            ...        ...          ...   \n",
+       "4995   Household       Offline              C 2015-04-03  217984473.0   \n",
+       "4996     Clothes       Offline              L 2014-08-17  169748055.0   \n",
+       "4997   Baby Food       Offline              H 2016-11-23          NaN   \n",
+       "4998     Clothes        Online              L 2014-04-22          NaN   \n",
+       "4999  Vegetables        Online              L 2011-07-08          NaN   \n",
        "\n",
        "       Ship_Date  Units_Sold  Unit_SellingPrice  Unit_MakingCost  Year  Month  \\\n",
-       "0     01-11-2014         552             255.28           159.42  2013     12   \n",
-       "1      7/26/2010        2167             152.58            97.44  2010      7   \n",
-       "2      9/29/2011        4778              47.45            31.79  2011      9   \n",
-       "3      6/15/2010        9016             205.70           117.11  2010      5   \n",
-       "4      7/27/2015        7542             152.58            97.44  2015      7   \n",
+       "0     01/11/2014         552             255.28           159.42  2013     12   \n",
+       "1     07/26/2010        2167             152.58            97.44  2010      7   \n",
+       "2     09/29/2011        4778              47.45            31.79  2011      9   \n",
+       "3     06/15/2010        9016             205.70           117.11  2010      5   \n",
+       "4     07/27/2015        7542             152.58            97.44  2015      7   \n",
        "...          ...         ...                ...              ...   ...    ...   \n",
-       "4995   4/20/2015        5305             668.27           502.54  2015      4   \n",
-       "4996  10-02-2014        1077             109.28            35.84  2014      8   \n",
-       "4997  12-10-2016        5204             255.28           159.42  2016     11   \n",
-       "4998  05-11-2014        9410             109.28            35.84  2014      4   \n",
-       "4999  08-07-2011        2450             154.06            90.93  2011      7   \n",
+       "4995  04/20/2015        5305             668.27           502.54  2015      4   \n",
+       "4996  10/02/2014        1077             109.28            35.84  2014      8   \n",
+       "4997  12/10/2016        5204             255.28           159.42  2016     11   \n",
+       "4998  05/11/2014        9410             109.28            35.84  2014      4   \n",
+       "4999  08/07/2011        2450             154.06            90.93  2011      7   \n",
        "\n",
        "      Day  \n",
        "0      20  \n",
@@ -670,7 +670,7 @@
        "[5000 rows x 15 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "9a0f90e5-2225-4cbe-9140-113c39c72f5a",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "3e084cee-ca5e-46f5-ab8e-8ea698293f05",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "e757d1da-8efe-456b-8765-b2954edcf80c",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "176f97f7-b5d2-45d2-8060-2c11b8b1c1bf",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "id": "51d3e480-ff52-463a-b37f-9361cfa689e0",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1076,7 @@
        "[5000 rows x 18 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "ccf0554a-c1f6-4e8e-b68b-a01c6d35273e",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "id": "aee3a4d0-803f-430e-8ba3-1094c120b41d",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "id": "2c9370de-8f0d-4ec1-9ae6-0aad03ed2f80",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "id": "fbd559f4-6228-47b2-9c76-cba25afa3833",
    "metadata": {},
    "outputs": [],
@@ -1159,13 +1159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "8c4f8771-b139-4675-8a19-7959ef1bc911",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataframe to a CSV file\n",
-    "df_csv3.to_csv('data_all_regions_clean_dates_too', index=False)\n"
+    "df_csv3.to_csv('data_all_regions_clean_dates_too2.csv', index=False)\n"
    ]
   },
   {
